# arya_date

./: .gitignore  .tool-versions  README.md  data_augment.py  ensemble_folds.ipynb  extract_rect.py  pyproject.toml  requirements.txt  split_images.py  visualize_rect.py
inference/: architecture.py  data_generator.py  extract_rect.py  inference.py  inference_kfold.py
inference/models/: digits_ocr.h5  digits_ocr_fold_0.h5  digits_ocr_fold_1.h5  digits_ocr_fold_2.h5  digits_ocr_fold_3.h5  digits_ocr_fold_4.h5
notebooks/: digits-ocr.ipynb  digits_classification.ipynb  digits_ocr_kfold_v1.ipynb  image_captioning.ipynb  image_captioning_kfold.ipynb  knn-find-duplicates-cropped-data.ipynb  knn-find-duplicates.ipynb  starter_notebook.ipynb
